--- a/Petspot/Base.lproj/Main.storyboard
+++ b/Petspot/Base.lproj/Main.storyboard
@@ -187,6 +187,183 @@
             </objects>
             <point key="canvasLocation" x="138.75" y="880.9859154929577"/>
         </scene>
+        <!--Friends View Controller-->
+        <scene sceneID="Sdv-r8-SOu">
+            <objects>
+                <viewController id="425-XT-toc" customClass="FriendsViewController" customModule="Petspot" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LjK-9a-xvR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zt6-CA-qgJ">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Friends" id="POy-ue-DG8">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="75y-Ac-W53">
+                                            <connections>
+                                                <action selector="refresh:" destination="425-XT-toc" id="huw-MW-GCO"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d9T-PP-ybP">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="&lt; Back" id="TlP-RR-98a">
+                                        <connections>
+                                            <action selector="back:" destination="425-XT-toc" id="Apq-vw-ny9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ALw-ty-Eo7"/>
+                                    <barButtonItem title="View Requests" id="EyF-Di-fPS">
+                                        <connections>
+                                            <action selector="view_requests:" destination="425-XT-toc" id="rx2-vA-Xj3"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jo0-TE-uyk">
+                                <rect key="frame" x="0.0" y="104" width="320" height="420"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="XkJ-VE-mNP">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XkJ-VE-mNP" id="PqN-IE-E5M">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="425-XT-toc" id="9xm-GY-1mr"/>
+                                    <outlet property="delegate" destination="425-XT-toc" id="mQU-Oi-Kw8"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-- friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gf0-uX-ITi">
+                                <rect key="frame" x="16" y="75" width="288" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="tDk-4n-mJY"/>
+                    </view>
+                    <connections>
+                        <outlet property="output_label" destination="Gf0-uX-ITi" id="Hff-Dl-zVE"/>
+                        <outlet property="table" destination="jo0-TE-uyk" id="4Jl-FP-aRY"/>
+                        <segue destination="7tR-yD-QPg" kind="show" identifier="view_requests" id="AKB-bf-DtN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kOQ-J2-ZYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="937.5" y="880.9859154929577"/>
+        </scene>
+        <!--Friend Requests View Controller-->
+        <scene sceneID="hyk-q9-ycF">
+            <objects>
+                <viewController id="7tR-yD-QPg" customClass="FriendRequestsViewController" customModule="Petspot" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cjk-lz-uJC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k75-5I-ufn">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Friend Requests" id="uF6-Xm-FAD">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="h2y-ke-pG8">
+                                            <connections>
+                                                <action selector="refresh:" destination="7tR-yD-QPg" id="k2n-uf-WFJ"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RP7-Of-Rx6">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="&lt; Back" id="mFi-TI-hdx">
+                                        <connections>
+                                            <action selector="back:" destination="7tR-yD-QPg" id="j7e-Fy-3G3"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Jmb-ny-TKD"/>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Uvt-nA-swP">
+                                <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="07U-AZ-idB">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="07U-AZ-idB" id="U7G-FD-Im9">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="7tR-yD-QPg" id="0qU-Bx-XsJ"/>
+                                    <outlet property="delegate" destination="7tR-yD-QPg" id="p9C-JC-M6f"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hyL-ci-xC0"/>
+                    </view>
+                    <connections>
+                        <outlet property="table" destination="Uvt-nA-swP" id="1BD-DE-hhn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O9D-bl-5d0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1665" y="880.9859154929577"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="JyG-mO-j3m">
+            <objects>
+                <viewController id="lEA-nb-qT8" customClass="ProfileViewController" customModule="Petspot" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Xqq-DZ-3Rz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="clo-py-1my">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Profile" id="Jcu-zM-pt2"/>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OCi-zT-oax">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="&lt; Back" id="Aeh-5K-Ht9">
+                                        <connections>
+                                            <action selector="back:" destination="lEA-nb-qT8" id="BPg-W0-XAO"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="TAG-v0-j2k"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3U5-qt-wSC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="938" y="-599"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="jkG-kv-rMP">
             <objects>
@@ -200,7 +377,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Home" id="5qb-aL-sd1">
-                                        <barButtonItem key="leftBarButtonItem" title="Profile" id="IfA-RV-btO"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Profile" id="IfA-RV-btO">
+                                            <connections>
+                                                <action selector="profile_button:" destination="RMx-5e-96c" id="saM-FY-spY"/>
+                                            </connections>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" title="Item" systemItem="search" id="Xj2-Ug-6aE">
                                             <connections>
                                                 <action selector="search_button:" destination="RMx-5e-96c" id="nzc-ll-JOf"/>
@@ -215,7 +396,11 @@
                                 <items>
                                     <barButtonItem title="My Pins" id="7uT-bn-oho"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="7Ht-9n-mtD"/>
-                                    <barButtonItem title="Friends" id="Fi7-Do-JH5"/>
+                                    <barButtonItem title="Friends" id="Fi7-Do-JH5">
+                                        <connections>
+                                            <action selector="friends:" destination="RMx-5e-96c" id="xlq-Gv-aBr"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="78q-98-cX2"/>
                                     <barButtonItem title="Log out" id="O1z-oS-1C9">
                                         <color key="tintColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -231,6 +416,8 @@
                     </view>
                     <connections>
                         <segue destination="gcc-f7-4lK" kind="show" identifier="search" id="gN9-2h-vjg"/>
+                        <segue destination="lEA-nb-qT8" kind="show" identifier="profile" id="nso-v7-mxY"/>
+                        <segue destination="425-XT-toc" kind="show" identifier="friends" id="8aV-EO-h2u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UJB-vC-h8r" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -459,6 +646,7 @@
                         <viewLayoutGuide key="safeArea" id="o5a-7h-Wx4"/>
                     </view>
                     <connections>
+                        <outlet property="add_friend_button_outlet" destination="4la-lO-edj" id="ZXP-ZC-tgF"/>
                         <outlet property="number_of_friends_label" destination="oPU-F6-449" id="1Kj-kz-VUQ"/>
                         <outlet property="pet_category_label" destination="9oB-5F-KGb" id="Cvm-Wg-c5M"/>
                         <outlet property="pet_name_label" destination="ac3-Oe-H4p" id="ENe-Pz-9GD"/>
